<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home_nav"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/search"
        android:title="@string/search_nav"
        android:icon="@drawable/baseline_search_24"/>
    <item
        android:id="@+id/add"
        android:title="@string/add_nav"
        android:icon="@drawable/baseline_add_box_24"/>
    <item
        android:id="@+id/notification"
        android:title="@string/notif_nav"
        android:icon="@drawable/notifications"/>
    <item
        android:id="@+id/account"
        android:title="@string/account_nav"
        android:icon="@drawable/baseline_person_24" />
</menu>