<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/loginbkg">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registeronpage"
                android:text="@string/register"
                android:textSize="30sp"
                android:textColor="@color/lavender"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:id="@+id/usernameregister"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="username"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/emailregister"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/fullnameregister"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:hint="@string/fullname"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="name"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:id="@+id/passwordregister"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:hint="@string/Password"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="password"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:id="@+id/registerButton"
                android:text="@string/register"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/purple_500"
                android:textAlignment="center"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>