<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/loginbkg"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="36sp"
                android:textStyle="bold" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:autofillHints="username"
                android:inputType="text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:autofillHints="password"/>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="@color/purple_500"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>